--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation Styles here
+
+nav {
+ display: flex;
+ margin: 0% 27% 2% 0%;
+ justify-content: flex-end;
+
+ a {
+  padding: 0 1.5%;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: black;
+
+  &:hover {
+   opacity: 1;
+
+   border-bottom: 1px solid black;
+
+  }
+
+ }
+}
